--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <kumuluzee.version>3.5.0</kumuluzee.version>
+        <kumuluzee-config.version>1.2.0</kumuluzee-config.version>
+        <kumuluzee-metrics.version>2.0.1</kumuluzee-metrics.version>
+        <kumuluzee-config-mp.version>1.3.0</kumuluzee-config-mp.version>
     </properties>
 
     <dependencyManagement>
@@ -65,6 +68,16 @@
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.11.679</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.metrics</groupId>
+            <artifactId>kumuluzee-metrics-core</artifactId>
+            <version>${kumuluzee-metrics.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.config</groupId>
+            <artifactId>kumuluzee-config-mp</artifactId>
+            <version>${kumuluzee-config-mp.version}</version>
         </dependency>
     </dependencies>
 
